# ramen_robot_ws

./: .gitignore  README.md  agv_conversion1.yaml  agv_conversion2.yaml  camera.txt  memo  test_integration.yaml
DepAny/: DepAny.py  DepAnyLoop.py  Logread.py  README.md
DepAny/Tested/2024\07\0701\144852/: Log.txt
DepAny/Tested/2024\07\0701\145352/: Log.txt
DepAny/Tested/2024\07\0701\145744/: Log.txt
DepAny/Tested/2024\07\0701\150757/: Log.txt
DepAny/Tested/2024\07\0701\150854/: Log.txt
DepAny/Tested/2024\07\0702\185731/: Log.txt
DepAny/Tested/2024\07\0702\185907/: Log.txt
DepAny/Tested/2024\07\0702\190100/: Log.txt
DepAny/Tested/2024\07\0702\190158/: Log.txt
DepAny/Tested/2024\07\0702\190313/: Log.txt
DepAny/Tested/2024\07\0702\190408/: Log.txt
DepAny/Tested/2024\07\0702\190539/: Log.txt
DepAny/Tested/2024\07\0702\190835/: Log.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/is-json-xtypes/lib/: libis-json-xtypes.so.3.1  libis-json-xtypes.so.3.1.0
install/ramen_robot_launch/share/ramen_robot_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/accountant/: package.xml  setup.cfg  setup.py
src/agv/: setup.cfg  setup.py
src/agv/agv/: agv2_node.py
src/ramen_robot_launch/: setup.cfg  setup.py
src/ur3/: package.xml  setup.cfg  setup.py
src/ur5/: setup.cfg  setup.py
ur_control/: ur_listener.py
ur_pork_code/: chashu.py  takepic.py
ur_pork_code/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
ur_pork_code/log/: latest_build
(+112 files in other folders)
